--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
         <div class="row">
     
             <div id="bu-scrollbtn-left" class="col d-flex align-items-center">
-                <button class="btn bu-scrollbtn" ng-click="$ctrl.scrollLeft()">
+                <button class="bu-scrollbtn" ng-click="$ctrl.scrollLeft()">
                     <img class="bu-nt-btn-img " src="images/left.svg">
                 </button>
             </div>
@@ -44,7 +44,7 @@
             </div>
     
             <div id="bu-scrollbtn-right" class="col d-flex align-items-center">
-                <button class="btn bu-scrollbtn" ng-click="$ctrl.scrollRight()">
+                <button class="bu-scrollbtn" ng-click="$ctrl.scrollRight()">
                     <img class="bu-nt-btn-img" src="images/right.svg">
                 </button>
             </div>
