Variable consistency between Omni implementation

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
   </head>
   <body class="bg-secondary">
     <div ng-controller="MainController as $ctrl">
-      <div id="bu-new-titles" class="container-fluid" ng-show="$ctrl.showCarousel">
+      <div id="bu-new-titles" class="container-fluid" ng-show="$ctrl.showDisplay">
         <div class="row">
     
             <div id="bu-scrollbtn-left" class="col d-flex align-items-center">
