Added view all button

--- a/web/index.html
+++ b/web/index.html
@@ -55,6 +55,12 @@
                     <img class="bu-nt-btn-img" src="images/right.svg">
                 </button>
             </div>
+
+            <div id="bu-view" class="col d-flex align-items-center">
+                <button id="bu-view-btn" class="bu-scrollbtn" ng-click="$ctrl.viewAll()">
+                    View All
+                </button>
+            </div>
     
         </div>
     
