--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="newTitles">
+<html ng-app="newTitles" lang="en">
   <head>
     <meta charset="utf-8">
     <title>New Titles</title>
@@ -17,7 +17,7 @@
     
   </head>
   <body class="bg-secondary">
-    <div ng-controller="MainController as $ctrl">
+    <div ng-controller="MainController as $ctrl" aria-label="Main">
       <div id="bu-new-titles" class="container-fluid" ng-show="$ctrl.showDisplay" aria-label="new books carousel">
         <div class="row">
     
