--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,12 @@
                     View All
                 </button>
             </div>
+
+            <div id="bu-start" class="col d-flex align-items-center">
+                <button id="bu-start-btn" class="bu-scrollbtn" ng-click="$ctrl.toStart()">
+                    Start
+                </button>
+            </div>
             
             <div id="bu-outer-carousel" class="col">
                 <div id="bu-inner-carousel">
