Synchronized with Omni version

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,10 @@
     <div ng-controller="MainController as $ctrl" aria-label="Main">
       <div id="bu-new-titles" class="container-fluid" ng-show="$ctrl.showDisplay" aria-label="new books carousel">
         <div class="row">
+
+            <div id="title-bg" aria-label="new titles">
+                <p id="title">New Titles</p>
+              </div>
     
             <div id="bu-scrollbtn-left" class="col d-flex align-items-center">
                 <button class="bu-scrollbtn" ng-click="$ctrl.scrollLeft()">
